-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 6u10
-
Component/s: client-libs
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2165650 | 7 | Dmitri Trembovetski | P3 | Resolved | Fixed | b43 |
Customer experinces rendering issues with 6u10 on NVidia FX5200 when running
jconsole tool:
Double click jconsole.exe to start it.
When the "JConsole New Connection" window appears, pick it at the title bar and drag it around on the screen.
The body of the dialog is gone immediately and there is no way to get it back.
As you see, I do nothing special. Just drag the dialog.
[I] OS Version = OS_WINXP Pro
[I] CheckAdaptersInfo
[I] ------------------
[I] Adapter Ordinal : 0
[I] Adapter Handle : 0x10001
[I] Description : NVIDIA GeForce FX 5200
[I] GDI Name, Driver : \\.\DISPLAY1, nv4_disp.dll
[I] Vendor Id : 0x10de
[I] Device Id : 0x0322
[I] SubSys Id : 0x1b910de
[I] Driver Version : 6.14.10.4502
[I] GUID : {D7B71E3E-4062-11CF-F862-B32100C2CB35}
[I] D3DPPLM::CheckDeviceCaps: adapter 0: Passed
[I] ------------------
[I] Adapter Ordinal : 1
[I] Adapter Handle : 0x10003
[I] Description : NVIDIA GeForce FX 5200
[I] GDI Name, Driver : \\.\DISPLAY2, nv4_disp.dll
[I] Vendor Id : 0x10de
[I] Device Id : 0x0322
[I] SubSys Id : 0x1b910de
[I] Driver Version : 6.14.10.4502
[I] GUID : {D7B71E3E-4062-11CF-F862-B32100C2CB35}
[I] D3DPPLM::CheckDeviceCaps: adapter 1: Passed
[I] ------------------
[I] D3DGD_getDeviceCapsNative
[I] D3DContext::InitContext device 0
[I] D3DContext::ConfigureContext device 0
[V] dwBehaviorFlags=D3DCREATE_FPU_PRESERVE|D3DCREATE_HARDWARE_VERTEXPROCESSING
[I] D3DContext::ConfigureContext: successfully created device: 0
[I] D3DContext::InitDevice: device 0
[I] D3DContext::InitDefice: successfully initialized device 0
[V] | CAPS_DEVICE_OK
[V] | CAPS_RT_PLAIN_ALPHA
[V] | CAPS_RT_TEXTURE_ALPHA
[V] | CAPS_RT_TEXTURE_OPAQUE
[V] | CAPS_LCD_SHADER | CAPS_BIOP_SHADER | CAPS_PS20
[V] | CAPS_MULTITEXTURE
[V] | CAPS_TEXNONSQUARE
[I] D3DGD_getDeviceCapsNative
[I] D3DContext::InitContext device 1
[I] D3DContext::ConfigureContext device 1
[V] dwBehaviorFlags=D3DCREATE_FPU_PRESERVE|D3DCREATE_HARDWARE_VERTEXPROCESSING
[I] D3DContext::ConfigureContext: successfully created device: 1
[I] D3DContext::InitDevice: device 1
[I] D3DContext::InitDefice: successfully initialized device 1
[V] | CAPS_DEVICE_OK
[V] | CAPS_RT_PLAIN_ALPHA
[V] | CAPS_RT_TEXTURE_ALPHA
[V] | CAPS_RT_TEXTURE_OPAQUE
[V] | CAPS_LCD_SHADER | CAPS_BIOP_SHADER | CAPS_PS20
[V] | CAPS_MULTITEXTURE
[V] | CAPS_TEXNONSQUARE
jconsole tool:
Double click jconsole.exe to start it.
When the "JConsole New Connection" window appears, pick it at the title bar and drag it around on the screen.
The body of the dialog is gone immediately and there is no way to get it back.
As you see, I do nothing special. Just drag the dialog.
[I] OS Version = OS_WINXP Pro
[I] CheckAdaptersInfo
[I] ------------------
[I] Adapter Ordinal : 0
[I] Adapter Handle : 0x10001
[I] Description : NVIDIA GeForce FX 5200
[I] GDI Name, Driver : \\.\DISPLAY1, nv4_disp.dll
[I] Vendor Id : 0x10de
[I] Device Id : 0x0322
[I] SubSys Id : 0x1b910de
[I] Driver Version : 6.14.10.4502
[I] GUID : {D7B71E3E-4062-11CF-F862-B32100C2CB35}
[I] D3DPPLM::CheckDeviceCaps: adapter 0: Passed
[I] ------------------
[I] Adapter Ordinal : 1
[I] Adapter Handle : 0x10003
[I] Description : NVIDIA GeForce FX 5200
[I] GDI Name, Driver : \\.\DISPLAY2, nv4_disp.dll
[I] Vendor Id : 0x10de
[I] Device Id : 0x0322
[I] SubSys Id : 0x1b910de
[I] Driver Version : 6.14.10.4502
[I] GUID : {D7B71E3E-4062-11CF-F862-B32100C2CB35}
[I] D3DPPLM::CheckDeviceCaps: adapter 1: Passed
[I] ------------------
[I] D3DGD_getDeviceCapsNative
[I] D3DContext::InitContext device 0
[I] D3DContext::ConfigureContext device 0
[V] dwBehaviorFlags=D3DCREATE_FPU_PRESERVE|D3DCREATE_HARDWARE_VERTEXPROCESSING
[I] D3DContext::ConfigureContext: successfully created device: 0
[I] D3DContext::InitDevice: device 0
[I] D3DContext::InitDefice: successfully initialized device 0
[V] | CAPS_DEVICE_OK
[V] | CAPS_RT_PLAIN_ALPHA
[V] | CAPS_RT_TEXTURE_ALPHA
[V] | CAPS_RT_TEXTURE_OPAQUE
[V] | CAPS_LCD_SHADER | CAPS_BIOP_SHADER | CAPS_PS20
[V] | CAPS_MULTITEXTURE
[V] | CAPS_TEXNONSQUARE
[I] D3DGD_getDeviceCapsNative
[I] D3DContext::InitContext device 1
[I] D3DContext::ConfigureContext device 1
[V] dwBehaviorFlags=D3DCREATE_FPU_PRESERVE|D3DCREATE_HARDWARE_VERTEXPROCESSING
[I] D3DContext::ConfigureContext: successfully created device: 1
[I] D3DContext::InitDevice: device 1
[I] D3DContext::InitDefice: successfully initialized device 1
[V] | CAPS_DEVICE_OK
[V] | CAPS_RT_PLAIN_ALPHA
[V] | CAPS_RT_TEXTURE_ALPHA
[V] | CAPS_RT_TEXTURE_OPAQUE
[V] | CAPS_LCD_SHADER | CAPS_BIOP_SHADER | CAPS_PS20
[V] | CAPS_MULTITEXTURE
[V] | CAPS_TEXNONSQUARE
- backported by
-
JDK-2165650 D3D: rendering problems with JConsole on [Nvidia FX 5200]
-
- Resolved
-