6717988: D3D: rendering problems with JConsole on [Nvidia FX 5200]

Reviewed-by: campbell